docs/dolfin/1.5.0/python/source/programmers-reference/cpp/la/index.rst
.. Index file for the dolfin.cpp.la module.

.. _programmers_reference_cpp_la_index:

dolfin.cpp.la module
********************

Classes:

.. toctree::
    :maxdepth: 1

    BlockMatrix
    BlockVector
    CholmodCholeskySolver
    CoordinateMatrix
    DefaultFactory
    GenericLUSolver
    GenericLinearAlgebraFactory
    GenericLinearOperator
    GenericLinearSolver
    GenericMatrix
    GenericPreconditioner
    GenericSparsityPattern
    GenericTensor
    GenericVector
    KrylovSolver
    LUSolver
    LinearAlgebraObject
    LinearOperator
    LinearSolver
    Matrix
    NewtonSolver
    NonlinearProblem
    OptimisationProblem
    PETScBaseMatrix
    PETScFactory
    PETScKrylovSolver
    PETScLUSolver
    PETScLinearOperator
    PETScMatrix
    PETScObject
    PETScOptions
    PETScPreconditioner
    PETScSNESSolver
    PETScTAOSolver
    PETScUserPreconditioner
    PETScVector
    SLEPcEigenSolver
    STLFactory
    STLMatrix
    Scalar
    SparsityPattern
    TAOLinearBoundSolver
    UmfpackLUSolver
    Vector
    VectorSpaceBasis
    uBLASDenseFactory
    uBLASDenseMatrix
    uBLASILUPreconditioner
    uBLASKrylovSolver
    uBLASLinearOperator
    uBLASPreconditioner
    uBLASSparseFactory
    uBLASSparseMatrix
    uBLASVector

Functions:

.. toctree::
    :maxdepth: 1

    CholmodCholeskySolver_default_parameters
    DefaultFactory_factory
    KrylovSolver_default_parameters
    LUSolver_default_parameters
    LinearSolver_default_parameters
    NewtonSolver_default_parameters
    PETScFactory_instance
    PETScKrylovSolver_default_parameters
    PETScKrylovSolver_methods
    PETScKrylovSolver_preconditioners
    PETScLUSolver_default_parameters
    PETScLUSolver_methods
    PETScObject_petsc_error
    PETScOptions_clear
    PETScOptions_set
    PETScPreconditioner_default_parameters
    PETScPreconditioner_preconditioners
    PETScSNESSolver_default_parameters
    PETScSNESSolver_methods
    PETScTAOSolver_default_parameters
    PETScTAOSolver_methods
    SLEPcEigenSolver_default_parameters
    STLFactory_instance
    TAOLinearBoundSolver_default_parameters
    TAOLinearBoundSolver_krylov_solvers
    TAOLinearBoundSolver_methods
    TAOLinearBoundSolver_preconditioners
    UmfpackLUSolver_default_parameters
    as_backend_type
    get_tensor_type
    has_krylov_solver_method
    has_krylov_solver_preconditioner
    has_lu_solver_method
    has_type
    in_nullspace
    krylov_solver_methods
    krylov_solver_preconditioners
    la_index_dtype
    la_solve
    linear_algebra_backends
    linear_solver_methods
    list_krylov_solver_methods
    list_krylov_solver_preconditioners
    list_linear_algebra_backends
    list_linear_solver_methods
    list_lu_solver_methods
    lu_solver_methods
    normalize
    residual
    uBLASDenseFactory_instance
    uBLASKrylovSolver_default_parameters
    uBLASKrylovSolver_methods
    uBLASKrylovSolver_preconditioners
    uBLASSparseFactory_instance

Module docstring:

.. automodule:: dolfin.cpp.la
   :no-members:
   :no-undoc-members:
   :no-show-inheritance: